# loom

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  TEMP_DOCUMENTATION.md
.github/workflows/: build.yml  cmake-multi-platform.yml  style.yml
include/core/: Constants.hpp  EvaluationContext.hpp  Graph.hpp  Handle.hpp  Nodes.hpp  SlotMap.hpp  Types.hpp
include/gpu/: BindlessHeap.hpp  ComputeTask.hpp  DispatchManager.hpp  DisplayPass.hpp  PipelineCache.hpp  ResourceHandles.hpp  TransientBufferPool.hpp  TransientImagePool.hpp  VulkanContext.hpp
include/platform/: Window.hpp
include/ui/: ImGuiRenderer.hpp  NodeEditorPanel.hpp
shaders/: DisplayPass.frag  Fill.comp  FullscreenTriangle.vert  Passthrough.comp
src/: main.cpp
src/core/: Nodes.cpp
src/gpu/: BindlessHeap.cpp  DispatchManager.cpp  DisplayPass.cpp  PipelineCache.cpp  TransientBufferPool.cpp  TransientImagePool.cpp  VulkanContext.cpp
src/platform/: Window.cpp
src/ui/: ImGuiRenderer.cpp  NodeEditorPanel.cpp
tests/: test_graph  test_graph.cpp  test_slotmap  test_slotmap.cpp  test_topo  test_topo.cpp
tests/core/: GraphTest.cpp  IdTagTest.cpp  NodeBehaviorTest.cpp  PushPullTest.cpp  SlotMapTest.cpp  TopoTest.cpp
tests/gpu/: ComputeDispatchTest.cpp  DisplayPassTest.cpp  GraphExecutionTest.cpp  ResourcePoolTest.cpp  WindowResizeTest.cpp
